welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:73: error: not found: value fleur
	fleur(Color.BLUE);
        ^